--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,14 @@ python = ">=3.10,<3.13"
 pyaudio = "^0.2.13"
 openai = "^0.28.1"
 # without this, poetry will attempt to install `triton` which is not available for macos
+# https://github.com/openai/whisper/discussions/683
 openai-whisper = { git = "https://github.com/openai/whisper.git", rev = "0a60fcaa9b86748389a656aa013c416030287d47" }
 llvmlite = "0.41.0"
 numba = "0.58.0"
 rumps = "^0.4.0"
 pynput = "^1.7.6"
+pyobjc-framework-cocoa = "^10.0"
+pyobjc-framework-avfoundation = "^10.0"
 
 [tool.poetry.scripts]
 whisper = "whisper-dictation:main"
