--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ llvmlite = "0.41.0"
 numba = "0.58.0"
 rumps = "^0.4.0"
 pynput = "^1.7.6"
+faster-whisper = "^0.10.0"
 
 [tool.poetry.scripts]
 whisper = "whisper-dictation:main"
